<resources>
    <string name="app_name">News App</string>
    <string name="action_settings">Settings</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="server_error" translatable="false">Error occurred,check internet connection and try again later</string>

    <string name="retry" translatable="false">Retry</string>
    <string name="no_internet" translatable="false">No internet. Connect to wi-fi or cellular network.</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_underlined"><u>Login</u></string>
    <string name="don_t_have_an_account_yet">Don’t Have an Account yet?</string>
    <string name="sign_up_underlined"><u>Sign up</u></string>
    <string name="sign_up">Sign up</string>

    <string name="required">Field is required</string>

    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="username">UserName</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="news">News</string>
    <string name="password_should_be_more_than_8_characters">password should be more than 8 characters</string>
    <string name="password_should_more_than_8_chars">password should more than 8 chars</string>

    <string-array name="categories">
        <item>All</item>
        <item>Technology</item>
        <item>Health</item>
        <item>Sports</item>
        <item>Business</item>
        <item>Entertainment</item>
    </string-array>

</resources>